# Eventide

./: README.md  pyproject.toml
docs/: architecture.md
examples/: 01_basic_run.py  02_dma_contention.py  03_sweep.py
src/nic_sim/: __init__.py  blocks.py  cli.py  core.py  model.py  viz.py
tests/: test_model.py
