[project]
name = "nic-sim"
version = "0.1.0"
description = "A system-level functional model of a network interface card (NIC), built on SimPy, with internal-state tracing and post-run visualization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Torsten" }]
keywords = ["simulation", "simpy", "hardware", "modeling", "verification", "nic", "discrete-event"]

dependencies = [
    "simpy>=4.1",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
nic-sim = "nic_sim.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nic_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
